# statarb-engine

./: .gitignore  README.md  data_handler.py  pyproject.toml
configs/: baseline.yaml
notebooks/: results.ipynb
statarb/: __main__.py  engine.py  events.py  execution.py  portfolio.py
statarb/analytics/: deflated_sharpe.py  metrics.py  tearsheet.py
statarb/strategy/: kalman.py  pair_selection.py  pairs.py
statarb/validation/: sensitivity.py  walk_forward.py
tests/: test_accounting.py  test_costs.py  test_kalman.py  test_lookahead.py
